--- a/biblioteca/src/main/resources/templates/portal.html
+++ b/biblioteca/src/main/resources/templates/portal.html
@@ -2,19 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head th:replace="/fragments/head :: head"></head>
-
+    
     <body>
-
         <nav th:repalce="/fragments/navbar :: nav"></nav>
 
+        <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
+            <div class="card-body">
+                <h5 class="card-title">Exito</h5>
+                <p class="card-text" th:text="${exito}"></p>
+            </div>
+        </div>
+        <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
+            <div class="card-body">
+                <h5 class="card-title">Error ðŸ‘Ž</h5>
+                <p class="card-text" th:text="${error}"></p>
+            </div>
+        </div>
         <header class="header">
             <section class="contenedorMain">
                 <div class="tituloBiblioteca">
                     <a class="navbar-brand" href="#">BIBLIOTECA EGG</a>
                 </div>
                 <div class="container contenedorLibros">
-                    <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola de vuelta '+ ${session.usuariosession.nombre} "></p>
-                    <a class="btn btn-xl mt-2 boton">Ver Listado</a>
+                    <p class="tituloLibros">Encontrá todos los Libros Aquí!</p>
+
                 </div>
                 <div class="bg-circle-1 bg-circle"></div>
                 <div class="bg-circle-2 bg-circle"></div>
