--- a/biblioteca/src/main/resources/templates/editorial_list.html
+++ b/biblioteca/src/main/resources/templates/editorial_list.html
@@ -90,7 +90,7 @@
                 <tr>
                     <th scope="col">Id de la Editorial</th>
                     <th scope="col">Nombre la Editorial</th>
-                    <th scope="col">Acciones</th>
+                    <th scope="col" sec:authorize="hasRole('ADMIN')">Acciones</th>
 
                 </tr>
             </thead>
@@ -99,7 +99,7 @@
                     <th scope="row" th:text="${editorial.id}"></th>
                     <td th:text="${editorial.nombre}"></td>
                     <td>
-                        <a th:href="@{/editorial/modificar/__${editorial.id}__}"><i class="fas fa-feather-alt"> </i> Modificar
+                        <a sec:authorize="hasRole('ADMIN')" th:href="@{/editorial/modificar/__${editorial.id}__}"><i class="fas fa-feather-alt"> </i> Modificar
                         </a>
                     </td>
 
