--- a/biblioteca/src/main/resources/templates/fragments/navbar.html
+++ b/biblioteca/src/main/resources/templates/fragments/navbar.html
@@ -10,12 +10,12 @@
     <div class="collapse navbar-collapse elementosNav" id="navbarNavDropdown">
       <ul class="navbar-nav ms-auto elementos">
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Libros
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 
-                <li><a class="dropdown-item" th:href="@{/libro/registrar}">Crear Libro</a></li>
+                <li><a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/libro/registrar}">Crear Libro</a></li>
                 <li><hr class="dropdown-divider"></li>
                 
                 <li><a class="dropdown-item" th:href="@{/libro/lista}">Listar Libros</a></li>
@@ -24,12 +24,12 @@
 
 
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Autores
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 
-                <li><a class="dropdown-item" th:href="@{/autor/registrar}">Crear Autor</a></li>
+                <li><a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/autor/registrar}">Crear Autor</a></li>
                 <li><hr class="dropdown-divider"></li>
                
                 <li><a class="dropdown-item" th:href="@{/autor/lista}">Listar Autores</a></li>
@@ -39,12 +39,12 @@
 
 
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Editoriales
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 
-                <li><a class="dropdown-item" th:href="@{/editorial/registrar}">Crear Editorial</a></li>
+                <li><a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/editorial/registrar}">Crear Editorial</a></li>
                 <li><hr class="dropdown-divider"></li>
                 
                 <li><a class="dropdown-item" th:href="@{/editorial/lista}">Listar Editoriales</a></li>
@@ -60,6 +60,18 @@
             </ul>
         </li>
         
+        <li class="nav-item">
+            <a href="/registrar" th:if="${session.usuariosession == null}" class="nav-link" id="navbarNavDropdown" role="button" aria-expanded="false">
+                Registrate!
+            </a>
+        </li>
+
+        <li class="nav-item">
+            <a href="/login" th:if="${session.usuariosession == null}" class="nav-link" id="navbarNavDropdown" role="button" aria-expanded="false">
+                Ingresar!
+            </a>
+        </li>
+
       </ul>
     </div>
 </nav>
