--- a/biblioteca/src/main/resources/templates/inicio.html
+++ b/biblioteca/src/main/resources/templates/inicio.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-    <head th:replace="/fragments/head :: head"></head>
+<head th:replace="~{fragments/head :: head}"></head>
 
     <body>
 
-        <nav th:repalce="/fragments/navbar :: nav"></nav>
+        <nav th:replace="/fragments/navbar :: nav"></nav>
 
         <header class="header">
             <section class="contenedorMain">
